--- a/style.css
+++ b/style.css
@@ -8,3 +8,25 @@ body {
     box-shadow: 5px 5px 10px gray;
     padding: 50px;
 }
+
+#transaction-area {
+    display: none;
+}
+
+.deposit {
+    background-color: slateblue;
+}
+
+.withdraw {
+    background-color: lightsalmon
+}
+
+.balance {
+    background-color: orange;
+}
+
+.status {
+    border-radius: 10px;
+    padding: 30px;
+    color: white;
+}
